Odd version numbers refer to versions containing full (confidential) UN data.
Even version numbers refer to versions containing reduced (public) UN data. 
===================================================
3.2-0
-----
Added mx, qx and migration to expressions.

Allowed using zero index for age group 0-1.

Functions LifeTableMx and LifeTableMxCol added.

3.1-11 (2/16/2013)
------
Fixed an issue with NAs in TFR trajectories. 

3.1-9/10 (1/3/2013)
-----
.First.lib and .Last.lib changed to .onLoad and .onUnload

3.1-7/8 (12/16/2012)
-----
Registred global object LOCATIONS (using utils::globalVariables()).

3.1-5/6 (12/15/2012)
-----
Example data reduced to two countries.

3.1-3/4 (12/02/2012)
-----
Bug fixes in regional aggregation.

Function pop.byage.plotAll added.

Suggested packages added to DESCRIPTION.

3.1-1 (11/16/2012)
-----
Bug in get.pop fixed.

In write.pop.projection.summary, argument 'alias' splitted into 'file.suffix' and expression.label.

Kannisto method modified to use female-male joint estimation of its slope parameter -> therefore no crossovers in the extrapolated death rates.   

3.0-3 (10/14/2012)
-----
Male Mx for ages 100-130+ constrained to be larger than female Mx. Others no constraints.

3.0-1 (10/11/2012)
-----
Male Mx constrained to be larger than female Mx.

Functions for plotting and tabulating indicators by age (pop.byage.plot, pop.byage.table)

Functions for creating maps implemented (pop.map, pop.map.gvis). 

Expression language added for visualizing and summarizing any population measure using pop.trajectories.plot/table and map functions.

Caching mechanism added for time-efficient plotting of maps.

Storing vital events possible via pop.predict (argument keep.vital.events).

Implemented a function for writing a summary file for any population measure and stored vital events (write.pop.projection.summary).

2.0-1/2 (06/05/2012)
-----
S3 object and S3 methods for plotting pyramids. The pyramid functions completly re-implemented.
