@@ -9,6 +9,8 @@ Allowed using zero index for age group 0-1.
 
 Functions LifeTableMx and LifeTableMxCol added.
 
+Indicator added to pop.pyramid.
+
 3.1-11 (2/16/2013)
 ------
 Fixed an issue with NAs in TFR trajectories. 
